--- a/app/src/main/res/layout/activity_score_board.xml
+++ b/app/src/main/res/layout/activity_score_board.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.activity_score_board">
+    tools:context=".UI.ScoreBoardActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
