--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -32,7 +32,16 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="100dp"
         />
-
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_logout_dashboard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/dashboardLogoutText"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp" />
 
 
 
